# rust_repository_pattern

./: Cargo.toml  appsettings.json
src/: database.rs  id.rs  main.rs
src/controllers/: mod.rs  response.rs  user_controller.rs
src/factories/: mod.rs  user_factory.rs
src/models/: mod.rs  user.rs
src/repositories/: mod.rs  repository.rs  user_repository.rs
src/services/: mod.rs  service.rs  user_service.rs
