[package]
name = "repositorypattern"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "*"
tokio = "*"
cdbc-mssql = "0.1.22"
mco = "0.1"
mco-http = "0.1"
log = "0.4"
fast_log = "1.5"
serde = "1.0"
serde_json = "1.0"
cdbc = "*"
rand = "0.8.5"