[package]
name = "repositorypattern"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "*"
tokio = "*"
cdbc-mssql = "0.1.22"
mco = "0.1"
mco-http = "0.1"
log = "0.4"
fast_log = "1.5"
cdbc = "*"
rand = "0.8.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
actix-rt = "2.7.0"
actix-web = "4.2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
env_logger = "0.9.1"